tests/baselines/reference/isLiteral2.errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
isLiteral2.ts(1,17): error TS1121: Octal literals are not allowed. Use the syntax '0o2343'.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== isLiteral2.ts (1 errors) ====
    var x: number = 02343
                    ~~~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o2343'.